--- a/index.html
+++ b/index.html
@@ -334,10 +334,10 @@
                         <i class="header__sort-icon fas fa-chevron-down"></i>
                         <ul class="header__sort-list">
                             <li class="header__sort-list-cost">
-                                <a href="" class="header__sort-cost-link">Giá thấp đến cao</a>
+                                <a href="#" class="header__sort-cost-link">Giá thấp đến cao</a>
                             </li>
                             <li class="header__sort-list-cost">
-                                <a href="" class="header__sort-cost-link">Giá cao đến thấp</a>
+                                <a href="#" class="header__sort-cost-link">Giá cao đến thấp</a>
                             </li>
                         </ul>
                     </div>
@@ -893,9 +893,9 @@
         </div>
 
         <footer class="footer">
-            <div class="grid wide">
+            <div class="grid wide footer__content-mobile">
                 <div class="row">
-                    <div class="col l-2-4 m-3 c-6">
+                    <div class="col l-2-4 m-4 c-6">
                         <h3 class="footer__heading">Chăm sóc khách hàng</h3>
                         <ul class="footer__list">
                             <li class="footer__item">
@@ -909,7 +909,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col l-2-4 m-3 c-6">
+                    <div class="col l-2-4 m-4 c-6">
                         <h3 class="footer__heading">Về kien108-shop</h3>
                         <ul class="footer__list">
                             <li class="footer__item">
@@ -923,10 +923,21 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col l-2-4 m-3 c-6">
+                    <div class="col l-2-4 m-4 c-6">
                         <h3 class="footer__heading">Thanh toán</h3>
+                        <ul class="footer__list">
+                            <li class="footer__item">
+                                <a href="" class="footer__item-link">Airpay</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="" class="footer__item-link">Credit Card</a>
+                            </li>
+                            <li class="footer__item"> 
+                                <a href="" class="footer__item-link"></a>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="col l-2-4 m-3 c-6">
+                    <div class="col l-2-4 m-4 c-6">
                         <h3 class="footer__heading">Theo dõi</h3>
                         <ul class="footer__list">
                             <li class="footer__item">
@@ -949,7 +960,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col l-2-4 m-3 c-6">
+                    <div class="col l-2-4 m-8 c-12">
                         <h3 class="footer__heading">Tải ứng dụng Kien108 ngay thôi</h3>
                         <div class="footer__download">
                             <img src="./assets/imgs/qr_code.png" alt="Download QR" class="footer__download-qr">
