--- a/index.html
+++ b/index.html
@@ -933,8 +933,12 @@
                                 <a href="" class="footer__item-link">Credit Card</a>
                             </li>
                             <li class="footer__item"> 
-                                <a href="" class="footer__item-link"></a>
+                                <a href="" class="footer__item-link">MoMo</a>
                             </li>
+                            <li class="footer__item"> 
+                                <a href="" class="footer__item-link">MoMo</a>
+                            </li>
+                            
                         </ul>
                     </div>
                     <div class="col l-2-4 m-4 c-6">
