--- a/index.html
+++ b/index.html
@@ -935,6 +935,9 @@
                             <li class="footer__item">
                                 <a href="" class="footer__item-link">Credit Card</a>
                             </li>
+                            <li class="footer__item">
+                                <a href="" class="footer__item-link">Credit Card</a>
+                            </li>
                             <li class="footer__item"> 
                                 <a href="" class="footer__item-link">MoMo</a>
                             </li>
