--- a/index.html
+++ b/index.html
@@ -941,6 +941,9 @@
                             <li class="footer__item"> 
                                 <a href="" class="footer__item-link">MoMo</a>
                             </li>
+                            <li class="footer__item"> 
+                                <a href="" class="footer__item-link">MoMo</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="col l-2-4 m-4 c-6">
