--- a/index.html
+++ b/index.html
@@ -941,6 +941,9 @@
                             <li class="footer__item"> 
                                 <a href="" class="footer__item-link">MoMo</a>
                             </li>
+                            <li class="footer__item"> 
+                                <a href="" class="footer__item-link">MoMo</a>
+                            </li>
                            
                         </ul>
                     </div>
