--- a/bill.html
+++ b/bill.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <section class="body">
-        <div class="container">
+        <div class="container-body">
             <div class="body__left">
                 <div class="auth">
                     <a href="" class="auth__link">
