--- a/ProductDetails.html
+++ b/ProductDetails.html
@@ -111,8 +111,8 @@
                             Hỗ trợ
                         </a>
                     </li>
-                    <li class="header__navbar-item header__navbar-item--strong header__navbar-item--separate-strong js-sign-up">Đăng ký</li>
-                    <li class="header__navbar-item header__navbar-item--strong">Đăng nhập</li>
+                    <a href="./Register.html" class="header__navbar-item header__navbar-item--strong header__navbar-item--separate-strong js-sign-up">Đăng ký</a>
+                    <a href="./Login.html" class="header__navbar-item header__navbar-item--strong">Đăng nhập</a>
                     <!-- <li class="header__navbar-item header__navbar-user">
                         <img src="https://scontent.fvca1-1.fna.fbcdn.net/v/t1.6435-9/130100108_2782853672041729_1730562718292765879_n.jpg?_nc_cat=105&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=N3HPeEBCD00AX_gvRFb&_nc_ht=scontent.fvca1-1.fna&oh=bbd127abfcfd71f926987b8a54cf2fb4&oe=612784E3" alt="" class="header__user-img">
                         <span class="header__user-name">Trung Kiên</span>
